# dakal

./: .gitignore  README.md  config.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  start.bat  tsconfig.json  vite.config.ts
.github/workflows/: build.yml
src/: App.css  App.tsx  index.css  index.html  main.ts  script.js  style.css  styles.css
src-tauri/: Cargo.toml  build.rs  manifest.rc  manifest.xml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  main.rs  ping.rs  process.rs  singbox.rs
