[package]
name = "dakal"
version = "0.1.0"
edition = "2021"
description = "Dakal VPN Client - sing-box wrapper with space UI"
authors = ["soheilroko-netizen"]
license = "MIT"
repository = "https://github.com/soheilroko-netizen/dakal"

[build-dependencies]
tauri-build = { version = "2", features = [] }
embed-resource = "2"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"


[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = "debuginfo"
panic = "abort"
